--- a/package.json
+++ b/package.json
@@ -1,15 +1,34 @@
 {
-  "name": "fastify-test",
+  "name": "fastify-example",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
+  "jest": {
+    "moduleNameMapper": {
+      "root/(.*)": "<rootDir>/$1",
+      "config/(.*)": "<rootDir>/config/$1",
+      "api/(.*)": "<rootDir>/api/$1"
+    }
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node main.js",
+    "test": "jest"
+  },
+  "_moduleAliases": {
+    "root": ".",
+    "config": "config",
+    "api": "api"
   },
   "author": "JM",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "fastify": "^2.12.0"
+    "fastify": "^2.12.0",
+    "http-errors": "^1.7.3",
+    "module-alias": "^2.2.2"
+  },
+  "devDependencies": {
+    "jest": "^25.1.0",
+    "mocha": "^7.0.1"
   }
 }
